# recombox_plugin_the_pirate_bay

./: Cargo.toml  build.bat
.github/workflows/: build-ffi-release.yml  build-release.yml
src/: lib.rs
src/get_torrent/: mod.rs
src/search_source/: mod.rs  movies.rs  tv.rs
