[package]
name = "recombox_plugin_the_pirate_bay"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3 
lto = true 
strip = true
codegen-units = 1



[dependencies]
recombox_plugin_provider = {git = "https://github.com/RecomBox/recombox_plugin_provider"}
anyhow = "1.0.102"
reqwest = {version = "0.13.2", features = ["rustls", "json"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
tokio = { version = "1.50.0",  features = ["full"] }
urlencoding = "2.1.3"

